--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
         "psr-4": {
             "Prewk\\XmlStreamer\\": "src"
         }
+    },
+    "require": {
+        "php": ">=5.3.0"
     }
 }
