--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "prewk/xml-streamer",
     "description": "Stream large XML files with low memory consumption.",
-    "license": "MIT License",
+    "homepage": "https://github.com/prewk/XmlStreamer",
+    "license": "MIT",
     "authors": [
         {
             "name": "prewk",
