--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.3
 
 before_script:
-  composer selfupdate
-  composer dump-autoload
+  - composer selfupdate
+  - composer dump-autoload
 
 script: phpunit
